--- a/client/index.html
+++ b/client/index.html
@@ -1,100 +1,272 @@
 <!DOCTYPE html>
 <html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Hermes</title>
-		<meta name="description" content="Hermes" />
-		<meta name="keywords" content="Hermes" />
-		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="css/search.css" />
-		<script>document.documentElement.className = 'js';</script>
-	</head>
-	<body>
-		<svg class="hidden">
-			<defs>
-				<symbol id="icon-arrow" viewBox="0 0 24 24">
-					<title>arrow</title>
-					<polygon points="6.3,12.8 20.9,12.8 20.9,11.2 6.3,11.2 10.2,7.2 9,6 3.1,12 9,18 10.2,16.8 "/>
-				</symbol>
-				<symbol id="icon-drop" viewBox="0 0 24 24">
-					<title>drop</title>
-					<path d="M12,21c-3.6,0-6.6-3-6.6-6.6C5.4,11,10.8,4,11.4,3.2C11.6,3.1,11.8,3,12,3s0.4,0.1,0.6,0.3c0.6,0.8,6.1,7.8,6.1,11.2C18.6,18.1,15.6,21,12,21zM12,4.8c-1.8,2.4-5.2,7.4-5.2,9.6c0,2.9,2.3,5.2,5.2,5.2s5.2-2.3,5.2-5.2C17.2,12.2,13.8,7.3,12,4.8z"/><path d="M12,18.2c-0.4,0-0.7-0.3-0.7-0.7s0.3-0.7,0.7-0.7c1.3,0,2.4-1.1,2.4-2.4c0-0.4,0.3-0.7,0.7-0.7c0.4,0,0.7,0.3,0.7,0.7C15.8,16.5,14.1,18.2,12,18.2z"/>
-				</symbol>
-				<symbol id="icon-search" viewBox="0 0 24 24">
-					<title>search</title>
-					<path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
-				</symbol>
-				<symbol id="icon-cross" viewBox="0 0 24 24">
-					<title>cross</title>
-					<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
-				</symbol>
-			</defs>
+
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Hermes</title>
+	<meta name="description" content="Effect inspiration for opening an image grid item." />
+	<meta name="keywords" content="image grid, effect, inspiration, css, javascript, animation, masonry" />
+	<meta name="author" content="Anudit Nagar" />
+	<link rel="shortcut icon" href="favicon.ico">
+
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/grid.css" />
+	<link rel="stylesheet" type="text/css" href="css/search.css" />
+
+	<script>document.documentElement.className = 'js';</script>
+	<script src="js/modernizr-custom.js"></script>
+</head>
+
+<body class="demo-2">
+	<svg class="hidden">
+		<defs>
+			<symbol id="icon-arrow" viewBox="0 0 24 24">
+				<title>arrow</title>
+				<polygon points="6.3,12.8 20.9,12.8 20.9,11.2 6.3,11.2 10.2,7.2 9,6 3.1,12 9,18 10.2,16.8 "/>
+			</symbol>
+			<symbol id="icon-drop" viewBox="0 0 24 24">
+				<title>drop</title>
+				<path d="M12,21c-3.6,0-6.6-3-6.6-6.6C5.4,11,10.8,4,11.4,3.2C11.6,3.1,11.8,3,12,3s0.4,0.1,0.6,0.3c0.6,0.8,6.1,7.8,6.1,11.2C18.6,18.1,15.6,21,12,21zM12,4.8c-1.8,2.4-5.2,7.4-5.2,9.6c0,2.9,2.3,5.2,5.2,5.2s5.2-2.3,5.2-5.2C17.2,12.2,13.8,7.3,12,4.8z"/><path d="M12,18.2c-0.4,0-0.7-0.3-0.7-0.7s0.3-0.7,0.7-0.7c1.3,0,2.4-1.1,2.4-2.4c0-0.4,0.3-0.7,0.7-0.7c0.4,0,0.7,0.3,0.7,0.7C15.8,16.5,14.1,18.2,12,18.2z"/>
+			</symbol>
+			<symbol id="icon-search" viewBox="0 0 24 24">
+				<title>search</title>
+				<path d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/>
+			</symbol>
+			<symbol id="icon-cross" viewBox="0 0 24 24">
+				<title>cross</title>
+				<path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+			</symbol>
+		</defs>
+	</svg>
+	<div class="search">
+		<button id="btn-search-close" class="btn btn--search-close" aria-label="Close search form">
+			<svg class="icon icon--cross"><use xlink:href="#icon-cross"></use>
 		</svg>
-		<div class="search">
-			<button id="btn-search-close" class="btn btn--search-close" aria-label="Close search form"><svg class="icon icon--cross"><use xlink:href="#icon-cross"></use></svg></button>
-			<form class="search__form" action="">
-				<input class="search__input" name="search" type="search" placeholder="Find..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
-				<span class="search__info">Hit enter to search or ESC to close</span>
-			</form>
+		</button>
+		<div class="search__form">
+			<input class="search__input" type="text" placeholder="Explore..." autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
+			<span class="search__info">Hit enter to search or ESC to close</span>
 		</div>
-		<div class="page">
-			<div class="page__folder page__folder--dummy"></div>
-			<div class="page__folder page__folder--dummy"></div>
-			<div class="page__folder page__folder--dummy"></div>
-			<main class="main-wrap page__folder">
-				<header class="hermes-header">
+	</div>
+	<div class="page">
+		<div class="page__folder page__folder--dummy"></div>
+		<div class="page__folder page__folder--dummy"></div>
+		<div class="page__folder page__folder--dummy"></div>
+		<main class="main-wrap page__folder">
+			<header class="hermes-header">
+				<a href="./index.html" style="text-decoration: none;color:#000">
 					<h1 class="hermes-header__title">Hermes</h1>
-					<div class="search-wrap">
-						<button id="btn-search" class="btn btn--search"><svg class="icon icon--search"><use xlink:href="#icon-search"></use></svg></button>
+				</a>
+				<div class="search-wrap">
+					<a class="btn btn--search" id="toggle-theme">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="4vh" viewBox="0 0 24 24"><path fill="#000" d="M4.069 13h-4.069v-2h4.069c-.041.328-.069.661-.069 1s.028.672.069 1zm3.034-7.312l-2.881-2.881-1.414 1.414 2.881 2.881c.411-.529.885-1.003 1.414-1.414zm11.209 1.414l2.881-2.881-1.414-1.414-2.881 2.881c.528.411 1.002.886 1.414 1.414zm-6.312-3.102c.339 0 .672.028 1 .069v-4.069h-2v4.069c.328-.041.661-.069 1-.069zm0 16c-.339 0-.672-.028-1-.069v4.069h2v-4.069c-.328.041-.661.069-1 .069zm7.931-9c.041.328.069.661.069 1s-.028.672-.069 1h4.069v-2h-4.069zm-3.033 7.312l2.88 2.88 1.415-1.414-2.88-2.88c-.412.528-.886 1.002-1.415 1.414zm-11.21-1.415l-2.88 2.88 1.414 1.414 2.88-2.88c-.528-.411-1.003-.885-1.414-1.414zm2.312-4.897c0 2.206 1.794 4 4 4s4-1.794 4-4-1.794-4-4-4-4 1.794-4 4zm10 0c0 3.314-2.686 6-6 6s-6-2.686-6-6 2.686-6 6-6 6 2.686 6 6z"/></svg>
+					</a>
+					<button id="btn-search" class="btn btn--search"><svg class="icon icon--search"><use xlink:href="#icon-search"></use></svg></button>
+				</div>
+			</header>
+			<div class="content">
+				<div class="topic-heading">
+					<h1 id='search-query'>Let's explore</h1>
+				</div>
+				<div class="grid">
+					<!--
+					<div class="grid__item" data-size="1280x857">
+						<a href="img/original/6.jpg" class="img-wrap"><img src="img/thumbs/6.jpg" alt="img06" />
+							<div class="description description--grid">
+								<h3>Mother's Love</h3>
+								<p>Every time you drink a glass of milk or eat a piece of cheese, you harm a mother. Please go vegan. <em>&mdash; Gary L. Francione</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
 					</div>
-				</header>
-			</main>
-		</div>
-    <script>
-      var pageContainer = document.querySelector('.page'),
-        openCtrl = document.getElementById('btn-search'),
-        closeCtrl = document.getElementById('btn-search-close'),
-        searchContainer = document.querySelector('.search'),
-        inputSearch = searchContainer.querySelector('.search__input');
+					<div class="grid__item" data-size="1280x1280">
+						<a href="img/original/7.jpg" class="img-wrap"><img src="img/thumbs/7.jpg" alt="img07" />
+							<div class="description description--grid">
+								<h3>Silent Killer</h3>
+								<p>Cows’ milk protein may be the single most significant chemical carcinogen to which humans are exposed. <em>&mdash; T. Colin Campbell</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon"></i><span>22.5mm</span></li>
+										<li><i class="icon"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon"></i><span>1/1000</span></li>
+										<li><i class="icon"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="1280x853">
+						<a href="img/original/8.jpg" class="img-wrap"><img src="img/thumbs/8.jpg" alt="img08" />
+							<div class="description description--grid">
+								<h3>Senseless Suffering</h3>
+								<p>The question is not, 'Can they reason?' nor, 'Can they talk?' but rather, 'Can they suffer?' <em>&mdash; Jeremy Bentham</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="865x1280">
+						<a href="img/original/9.jpg" class="img-wrap"><img src="img/thumbs/9.jpg" alt="img09" />
+							<div class="description description--grid">
+								<h3>Rabbit Intelligence</h3>
+								<p>If a rabbit defined intelligence the way man does, then the most intelligent animal would be a rabbit, followed by the animal most willing to obey the commands of a rabbit. <em>&mdash; Robert Brault</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="1280x1280">
+						<a href="img/original/10.jpg" class="img-wrap"><img src="img/thumbs/10.jpg" alt="img10" />
+							<div class="description description--grid">
+								<h3>Friendly Terms</h3>
+								<p>Man is the only animal that can remain on friendly terms with the victims he intends to eat until he eats them. <em>&mdash; Samuel Butler</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="1280x850">
+						<a href="img/original/11.jpg" class="img-wrap"><img src="img/thumbs/11.jpg" alt="img11" />
+							<div class="description description--grid">
+								<h3>Murder of Men</h3>
+								<p>The time will come when men such as I will look upon the murder of animals as they now look upon the murder of men.<em>&mdash; Leonardo Da Vinci</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="1280x853">
+						<a href="img/original/1.jpg" class="img-wrap"><img src="img/thumbs/1.jpg" alt="img01" />
+							<div class="description description--grid">
+								<h3>Highest Ethics</h3>
+								<p>Non-violence leads to the highest ethics, which is the goal of all evolution. Until we stop harming all other living beings, we are still savages <em>&mdash; Thomas Edison</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="958x1280">
+						<a href="img/original/2.jpg" class="img-wrap"><img src="img/thumbs/2.jpg" alt="img02" />
+							<div class="description description--grid">
+								<h3>Pleasure, Amusement &amp; Convenience</h3>
+								<p>We do not need to eat animals, wear animals, or use animals for entertainment purposes, and our only defense of these uses is our pleasure, amusement, and convenience.<em>&mdash; Gary L. Francione</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="837x1280">
+						<a href="img/original/3.jpg" class="img-wrap"><img src="img/thumbs/3.jpg" alt="img03" />
+							<div class="description description--grid">
+								<h3>Dinner</h3>
+								<p>We all love animals. Why do we call some 'pets' and others 'dinner'? <em>&mdash; K.D. Lang</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					<div class="grid__item" data-size="1280x961">
+						<a href="img/original/4.jpg" class="img-wrap"><img src="img/thumbs/4.jpg" alt="img04" />
+							<div class="description description--grid">
+								<h3>Appetite or Suffering?</h3>
+								<p>Could you look an animal in the eyes and say to it, 'My appetite is more important than your suffering'? <em>&mdash; Moby</em></p>
+								<div class="details">
+									<ul>
+										<li><i class="icon icon-camera"></i><span>Canon PowerShot S95</span></li>
+										<li><i class="icon icon-focal_length"></i><span>22.5mm</span></li>
+										<li><i class="icon icon-aperture"></i><span>&fnof;/5.6</span></li>
+										<li><i class="icon icon-exposure_time"></i><span>1/1000</span></li>
+										<li><i class="icon icon-iso"></i><span>80</span></li>
+									</ul>
+								</div>
+							</div>
+						</a>
+					</div>
+					-->
 
-      function setupSearch() {
-        initEvents();
-      }
+				</div>
 
-      function initEvents() {
-        openCtrl.addEventListener('click', openSearch);
-        closeCtrl.addEventListener('click', closeSearch);
-        document.addEventListener('keyup', function(ev) {
-          // escape key.
-          if( ev.keyCode == 27 ) {
-            closeSearch();
-          }
-        });
-      }
+				<div class="preview">
+					<button class="action action--close">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#fff" d="M24 20.188l-8.315-8.209 8.2-8.282-3.697-3.697-8.212 8.318-8.31-8.203-3.666 3.666 8.321 8.24-8.206 8.313 3.666 3.666 8.237-8.318 8.285 8.203z"/></svg>
+						<span class="text-hidden">Close</span>
+					</button>
+					<div class="description description--preview"></div>
+				</div>
+			</div>
+		</main>
+	</div>
 
-      function openSearch() {
-        pageContainer.classList.add('page--move');
-        searchContainer.classList.add('search--open');
-        inputSearch.focus();
-      }
+	<script src="js/imagesloaded.pkgd.min.js"></script>
+	<script src="js/masonry.pkgd.min.js"></script>
+	<script src="js/classie.js"></script>
+	<script src="js/uisetup.js"></script>
 
-      function closeSearch() {
-        pageContainer.classList.remove('page--move');
-        searchContainer.classList.remove('search--open');
-        inputSearch.blur();
-        inputSearch.value = '';
-      }
-
-      setupSearch();
-
-    </script>
 
     <script src="js/web3@1.3.0.min.js"></script>
-
     <script src="js/globals.js"></script>
     <script src="js/index.js"></script>
 
-	</body>
+</body>
+
 </html>
