--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,7 @@
 			</header>
 			<div class="content">
 				<div class="topic-heading">
-					<h1 id='search-query'>Let's explore</h1>
+					<h1 id='search-query'>Let's <span class="rainbow">Explore</span></h1>
 				</div>
 				<div class="grid">
 				</div>
