--- a/client/index.html
+++ b/client/index.html
@@ -5,11 +5,27 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Hermes</title>
-	<meta name="description" content="Effect inspiration for opening an image grid item." />
-	<meta name="keywords" content="image grid, effect, inspiration, css, javascript, animation, masonry" />
+	<meta name="title" content="Hermes">
 	<meta name="author" content="Anudit Nagar" />
-	<link rel="shortcut icon" href="favicon.ico">
+	<meta name="keywords" content="Inclusive, global gateway, decentralized, content, creation, exploration, SMS." />
+	<meta name="description" content="An Inclusive and global gateway to decentralized content creation and exploration using SMS.">
+	<link rel="shortcut icon" href="./img/icon.png">
+
+	<!-- Open Graph / Facebook -->
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://saarthi.anudit.dev/">
+	<meta property="og:title" content="Hermes">
+	<meta property="og:description" content="An Inclusive and global gateway to decentralized content creation and exploration using SMS.">
+	<meta property="og:image" content="https://saarthi.anudit.dev/img/poster.png">
+
+	<!-- Twitter -->
+	<meta property="twitter:card" content="summary_large_image">
+	<meta property="twitter:url" content="https://saarthi.anudit.dev/">
+	<meta property="twitter:title" content="Hermes">
+	<meta property="twitter:description" content="An Inclusive and global gateway to decentralized content creation and exploration using SMS.">
+	<meta property="twitter:image" content="https://saarthi.anudit.dev/img/poster.png">
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/grid.css" />
@@ -19,7 +35,7 @@
 	<script src="js/modernizr-custom.js"></script>
 </head>
 
-<body class="demo-2">
+<body>
 	<svg class="hidden">
 		<defs>
 			<symbol id="icon-arrow" viewBox="0 0 24 24">
@@ -93,7 +109,6 @@
 	<script src="js/masonry.pkgd.min.js"></script>
 	<script src="js/classie.js"></script>
 	<script src="js/uisetup.js"></script>
-
 
     <script src="js/web3@1.3.0.min.js"></script>
     <script src="js/globals.js"></script>
