--- a/client/index.html
+++ b/client/index.html
@@ -73,7 +73,7 @@
 		<main class="main-wrap page__folder">
 			<header class="hermes-header">
 				<div onclick="window.location.href='./index.html'">
-					<h1 class="hermes-header__title">Hermes</h1>
+					<h1 class="hermes-header__title">&nbsp;Hermes</h1>
 				</div>
 				<div class="search-wrap">
 					<a class="btn btn--search" id="toggle-theme" onclick="toggleDarkTheme()">
@@ -89,7 +89,7 @@
 			</header>
 			<div class="content">
 				<div class="topic-heading">
-					<h1 id='search-query'>Let's <span class="rainbow">Explore</span></h1>
+					<h1 id='search-query'>Loading...</h1>
 				</div>
 				<div class="grid">
 				</div>
@@ -110,7 +110,7 @@
 	<script src="js/classie.js"></script>
 	<script src="js/uisetup.js"></script>
 
-    <script src="js/web3@1.3.0.min.js"></script>
+	<script src="js/ethers@5.0.24.min.js"></script>
     <script src="js/globals.js"></script>
     <script src="js/index.js"></script>
 
