--- a/client/index.html
+++ b/client/index.html
@@ -15,17 +15,17 @@
 
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://saarthi.anudit.dev/">
+	<meta property="og:url" content="https://hermes.anudit.dev/">
 	<meta property="og:title" content="Hermes">
 	<meta property="og:description" content="An Inclusive and global gateway to decentralized content creation and exploration using SMS.">
-	<meta property="og:image" content="https://saarthi.anudit.dev/img/poster.png">
+	<meta property="og:image" content="https://hermes.anudit.dev/img/poster.png">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
-	<meta property="twitter:url" content="https://saarthi.anudit.dev/">
+	<meta property="twitter:url" content="https://hermes.anudit.dev/">
 	<meta property="twitter:title" content="Hermes">
 	<meta property="twitter:description" content="An Inclusive and global gateway to decentralized content creation and exploration using SMS.">
-	<meta property="twitter:image" content="https://saarthi.anudit.dev/img/poster.png">
+	<meta property="twitter:image" content="https://hermes.anudit.dev/img/poster.png">
 
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/grid.css" />
